@@ -2,6 +2,10 @@
 	$Author$ $Date$
 	1. продолжаем переделку truemod
 
+#Revision: 1769
+	#Author: ctapmex Date: 2011-08-04 00:15:16 +0600 (Чт, 04 авг 2011)
+	1. продолжаем переделку truemod
+
 #Revision: 1768
 	#Author: ctapmex Date: 2011-08-03 22:57:28 +0600 (Ср, 03 авг 2011)
 	1. начало переделки родного truemod на фаровский
